Update Index.html with romantic birthday page features

--- a/Index.html
+++ b/Index.html
@@ -1,96 +1,1 @@
-<!DOCTYPE html>
-<html lang="hi">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday!</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(to right, #ffbc00, #ff66a3);
-            text-align: center;
-            overflow: hidden;
-        }
-        header {
-            margin: 20px;
-            font-size: 2em;
-            color: white;
-            text-shadow: 2px 2px 5px #000;
-        }
-        button {
-            background-color: #ff007f;
-            border: none;
-            color: white;
-            padding: 15px 30px;
-            font-size: 1em;
-            margin: 10px;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background 0.3s;
-        }
-        button:hover {
-            background-color: #ff5e3a;
-        }
-        #loveCounter {
-            font-size: 1.5em;
-            color: red;
-        }
-        .floating-hearts {
-            position: absolute;
-            pointer-events: none;
-            animation: float 5s infinite;
-        }
-        @keyframes float {
-            0% { transform: translateY(0); }
-            50% { transform: translateY(-30px); }
-            100% { transform: translateY(0); }
-        }
-        #photoGallery {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            margin-top: 20px;
-        }
-        #photoGallery img {
-            width: 150px;
-            height: 150px;
-            margin: 5px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.5);
-        }
-    </style>
-</head>
-<body>
-    <header class="animate__animated animate__fadeIn">Happy Birthday to You!</header>
-    <button onclick="playMusic()">Play Birthday Song</button>
-    <button onclick="pauseMusic()">Pause Music</button>
-    <div id="loveCounter">Love Counter: <span id="count">0</span></div>
-    <button onclick="incrementCounter()">Show Love ❤️</button>
-    <div id="photoGallery">
-        <img src="path_to_image_1.jpg" alt="Birthday Image 1">
-        <img src="path_to_image_2.jpg" alt="Birthday Image 2">
-        <img src="path_to_image_3.jpg" alt="Birthday Image 3">
-        <img src="path_to_image_4.jpg" alt="Birthday Image 4">
-    </div>
-    <audio id="birthdaySong" src="https://cdn.example.com/royalty-free-hindi-birthday-song.mp3" preload="auto"></audio>
-    <script>
-        let count = 0;
-        function incrementCounter() {
-            count++;
-            document.getElementById('count').innerText = count;
-        }
-        function playMusic() {
-            document.getElementById('birthdaySong').play();
-        }
-        function pauseMusic() {
-            document.getElementById('birthdaySong').pause();
-        }
-    </script>
-    <div class="floating-hearts">
-        <span style="font-size: 50px;">❤️</span>
-        <span style="font-size: 50px;">❤️</span>
-        <span style="font-size: 50px;">❤️</span>
-    </div>
-</body>
-</html>
+<!DOCTYPE html>\n<html lang='en'>\n<head>\n    <meta charset='UTF-8'>\n    <meta name='viewport' content='width=device-width, initial-scale=1.0'>\n    <title>Romantic Birthday Page</title>\n    <style>\n        body {\n            margin: 0;\n            padding: 0;\n            background: linear-gradient(to right, #ff7e8b, #ffb3b3);\n            font-family: 'Arial', sans-serif;\n            overflow: hidden;\n        }\n        h1 {\n            text-align: center;\n            color: #fff;\n            margin-top: 20%;\n            font-size: 5em;\n        }\n        .message {\n            text-align: center;\n            color: #fff;\n            margin: 20px;\n            font-size: 1.5em;\n        }\n        .funny-section {\n            text-align: center;\n            color: #fff;\n            margin: 20px;\n        }\n        .button {\n            display: inline-block;\n            padding: 15px 30px;\n            font-size: 1.2em;\n            margin: 10px;\n            border: none;\n            border-radius: 5px;\n            background-color: #fff;\n            color: #ff0076;\n            cursor: pointer;\n            transition: background-color 0.3s, color 0.3s;\n        }\n        .button:hover {\n            background-color: #ff0076;\n            color: #fff;\n        }\n        .container {\n            position: relative;\n            height: 100vh;\n            overflow: hidden;\n        }\n        .confetti {\n            position: absolute;\n            width: 100%;\n            height: 100%;\n            overflow: hidden;\n            pointer-events: none;\n        }\n        @keyframes float {\n            0% { transform: translateY(0); }\n            50% { transform: translateY(-20px); }\n            100% { transform: translateY(0); }\n        }\n        // Add your floating hearts and confetti animations here.\n    </style>\n</head>\n<body>\n    <div class='container'>\n        <h1>Happy Birthday!</h1>\n        <div class='message'>\n            "Wishing you a year filled with the same joy you bring to our lives!"\n        </div>\n        <div class='funny-section'>\n            <p>Why did the birthday cake go to school? Because it wanted to be a little layer! 🎂</p>\n        </div>\n        <button class='button' id='loveMessage'>Love Message</button>\n        <button class='button' id='musicControl'>Music Control</button>\n        <button class='button' id='partyMode'>Party Mode</button>\n        <button class='button' id='loveCounter'>Love Counter</button>\n    </div>\n    <script>\n        // Add your JavaScript for the buttons and animations here.\n        document.getElementById('musicControl').onclick = function() {\n            var audio = new Audio('https://www.youtube.com/watch?v=5u4xTa3LR2U');\n            audio.play();\n        };\n    </script>\n</body>\n</html>\n
