--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,54 @@
-<!DOCTYPE html>\n<html lang='en'>\n<head>\n    <meta charset='UTF-8'>\n    <meta name='viewport' content='width=device-width, initial-scale=1.0'>\n    <title>Romantic Birthday Page</title>\n    <style>\n        body {\n            margin: 0;\n            padding: 0;\n            background: linear-gradient(to right, #ff7e8b, #ffb3b3);\n            font-family: 'Arial', sans-serif;\n            overflow: hidden;\n        }\n        h1 {\n            text-align: center;\n            color: #fff;\n            margin-top: 20%;\n            font-size: 5em;\n        }\n        .message {\n            text-align: center;\n            color: #fff;\n            margin: 20px;\n            font-size: 1.5em;\n        }\n        .funny-section {\n            text-align: center;\n            color: #fff;\n            margin: 20px;\n        }\n        .button {\n            display: inline-block;\n            padding: 15px 30px;\n            font-size: 1.2em;\n            margin: 10px;\n            border: none;\n            border-radius: 5px;\n            background-color: #fff;\n            color: #ff0076;\n            cursor: pointer;\n            transition: background-color 0.3s, color 0.3s;\n        }\n        .button:hover {\n            background-color: #ff0076;\n            color: #fff;\n        }\n        .container {\n            position: relative;\n            height: 100vh;\n            overflow: hidden;\n        }\n        .confetti {\n            position: absolute;\n            width: 100%;\n            height: 100%;\n            overflow: hidden;\n            pointer-events: none;\n        }\n        @keyframes float {\n            0% { transform: translateY(0); }\n            50% { transform: translateY(-20px); }\n            100% { transform: translateY(0); }\n        }\n        // Add your floating hearts and confetti animations here.\n    </style>\n</head>\n<body>\n    <div class='container'>\n        <h1>Happy Birthday!</h1>\n        <div class='message'>\n            "Wishing you a year filled with the same joy you bring to our lives!"\n        </div>\n        <div class='funny-section'>\n            <p>Why did the birthday cake go to school? Because it wanted to be a little layer! 🎂</p>\n        </div>\n        <button class='button' id='loveMessage'>Love Message</button>\n        <button class='button' id='musicControl'>Music Control</button>\n        <button class='button' id='partyMode'>Party Mode</button>\n        <button class='button' id='loveCounter'>Love Counter</button>\n    </div>\n    <script>\n        // Add your JavaScript for the buttons and animations here.\n        document.getElementById('musicControl').onclick = function() {\n            var audio = new Audio('https://www.youtube.com/watch?v=5u4xTa3LR2U');\n            audio.play();\n        };\n    </script>\n</body>\n</html>\n
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Happy Birthday!</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+        .love-animation {
+            animation: heartbeat 1s infinite;
+        }
+        @keyframes heartbeat {
+            0%, 20%, 50%, 80%, 100% {
+                transform: scale(1);
+            }
+            40% {
+                transform: scale(1.1);
+            }
+        }
+        #confetti {
+            display: none;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+        }
+    </style>
+</head>
+<body>
+    <h1>Happy Birthday!</h1>
+    <div class="love-animation">
+        <h2>With all my love!</h2>
+    </div>
+    <p>Here's a romantic message for you:</p>
+    <p>"You are my sun, my moon, and all my stars!"</p>
+    <iframe width="0" height="0" src="https://www.youtube.com/embed/VIDEO_ID?autoplay=1&loop=1&playlist=VIDEO_ID" frameborder="0" allow="autoplay"></iframe>
+    <script>
+        function showConfetti() {
+            const confetti = document.getElementById("confetti");
+            confetti.style.display = 'block';
+            // Logic for generating confetti
+        }
+        window.onload = function() {
+            showConfetti();
+        };
+    </script>
+    <div id="confetti">🎉🎉🎉🎊🎊🎊</div>
+</body>
+</html>
