--- a/Index.html
+++ b/Index.html
@@ -1,54 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday!</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f9f9f9;
-            color: #333;
-        }
-        .love-animation {
-            animation: heartbeat 1s infinite;
-        }
-        @keyframes heartbeat {
-            0%, 20%, 50%, 80%, 100% {
-                transform: scale(1);
-            }
-            40% {
-                transform: scale(1.1);
-            }
-        }
-        #confetti {
-            display: none;
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Happy Birthday Samia ❤️</title>
+<style>
+body {
+    margin:0;
+    padding:0;
+    overflow:hidden;
+    font-family:'Segoe UI', sans-serif;
+    background: linear-gradient(135deg,#ff4e8a,#8e2de2);
+    height:100vh;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    color:white;
+    text-align:center;
+}
+.card {
+    background: rgba(255,255,255,0.15);
+    backdrop-filter: blur(20px);
+    padding:40px;
+    border-radius:20px;
+    box-shadow:0 15px 40px rgba(0,0,0,0.4);
+    max-width:500px;
+    z-index:2;
+    position:relative;
+}
+h1{font-size:36px; margin-bottom:10px;}
+p{font-size:18px; line-height:1.6; margin:10px 0;}
+button {
+    margin-top:15px;
+    padding:12px 25px;
+    border:none;
+    border-radius:30px;
+    background:white;
+    color:#ff4e8a;
+    font-weight:bold;
+    cursor:pointer;
+    transition:0.3s;
+}
+button:hover {
+    background:#ffe6f0;
+    transform:scale(1.1);
+}
+/* Floating hearts */
+.heart{
+    position:absolute;
+    color:white;
+    animation:float 6s linear infinite;
+    pointer-events:none;
+}
+@keyframes float{
+    from{transform:translateY(100vh);}
+    to{transform:translateY(-10vh);}
+}
+canvas{position:absolute; top:0; left:0; z-index:1;}
+#loveMessage, #funnyMessage{
+    font-weight:bold;
+    margin-top:15px;
+    font-size:20px;
+}
+</style>
 </head>
 <body>
-    <h1>Happy Birthday!</h1>
-    <div class="love-animation">
-        <h2>With all my love!</h2>
-    </div>
-    <p>Here's a romantic message for you:</p>
-    <p>"You are my sun, my moon, and all my stars!"</p>
-    <iframe width="0" height="0" src="https://www.youtube.com/embed/VIDEO_ID?autoplay=1&loop=1&playlist=VIDEO_ID" frameborder="0" allow="autoplay"></iframe>
-    <script>
-        function showConfetti() {
-            const confetti = document.getElementById("confetti");
-            confetti.style.display = 'block';
-            // Logic for generating confetti
-        }
-        window.onload = function() {
-            showConfetti();
-        };
-    </script>
-    <div id="confetti">🎉🎉🎉🎊🎊🎊</div>
+
+<canvas id="fireworks"></canvas>
+
+<div class="card">
+    <h1>Happy Birthday, Samia ❤️</h1>
+    <p>You are the love of my life, my peace, and my greatest blessing.</p>
+
+    <button onclick="showLove()">Click for a Romantic Surprise 💌</button>
+    <p id="loveMessage"></p>
+
+    <button onclick="showFunny()">Click for Funny Surprise 😂</button>
+    <p id="funnyMessage"></p>
+</div>
+
+<!-- Background YouTube Music Embed -->
+<iframe id="ytmusic" width="0" height="0" src="https://www.youtube.com/embed/5u4xTa3LR2U?autoplay=1&loop=1&playlist=5u4xTa3LR2U&controls=0&mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+<script>
+// Romantic surprise
+function showLove(){
+    document.getElementById("loveMessage").innerHTML = "I love you forever, Samia 💍✨ Happy Birthday, my queen!";
+}
+
+// Funny surprise
+function showFunny(){
+    document.getElementById("funnyMessage").innerHTML = "🎉 Happy Birthday Moto! 😂🎉";
+}
+
+// Floating hearts
+for(let i=0;i<30;i++){
+    let heart=document.createElement("div");
+    heart.innerHTML="❤️";
+    heart.className="heart";
+    heart.style.left=Math.random()*100+"vw";
+    heart.style.fontSize=(15+Math.random()*25)+"px";
+    heart.style.animationDuration=(3+Math.random()*5)+"s";
+    document.body.appendChild(heart);
+}
+
+// Fireworks
+const canvas=document.getElementById("fireworks");
+const ctx=canvas.getContext("2d");
+canvas.width=window.innerWidth;
+canvas.height=window.innerHeight;
+function firework(){
+    let x=Math.random()*canvas.width;
+    let y=Math.random()*canvas.height/2;
+    for(let i=0;i<30;i++){
+        ctx.beginPath();
+        ctx.arc(x,y,2,0,Math.PI*2);
+        ctx.fillStyle="white";
+        ctx.fill();
+    }
+}
+setInterval(firework,600);
+</script>
 </body>
 </html>
