--- a/Index.html
+++ b/Index.html
@@ -83,7 +83,7 @@ canvas{position:absolute; top:0; left:0; z-index:1;}
 
 <!-- Background Music -->
 <audio id="bgMusic" loop>
-    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+    <source src="https://github.com/huzaifa259/samia-birthday/raw/main/Birthday%20Song!!!%20(1).mp3" type="audio/mpeg">
 </audio>
 
 <script>
@@ -132,4 +132,4 @@ function firework(){
 setInterval(firework,600);
 </script>
 </body>
-</html>
+        </html>
